feat(server): configure application settings for MagicOnion and Redis

--- a/Chat.Server/appsettings.Development.json
+++ b/Chat.Server/appsettings.Development.json
@@ -1,8 +1,14 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information",
+      "Grpc": "Debug",
+      "MagicOnion": "Debug"
     }
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379,abortConnect=false,connectRetry=3,connectTimeout=5000"
   }
 }
