--- a/Chat.Server/appsettings.json
+++ b/Chat.Server/appsettings.json
@@ -2,7 +2,23 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore": "Warning",
+      "Grpc": "Information",
+      "MagicOnion": "Information"
     }
+  },
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http2"
+    }
+  },
+  "Redis": {
+    "ConnectionString": "redis:6379,abortConnect=false,connectRetry=3,connectTimeout=5000"
+  },
+  "Chat": {
+    "ServerNotificationIntervalSeconds": 30,
+    "EnableServerNotifications": true
   }
 }
