--- a/Chat.Server/Chat.Server.csproj
+++ b/Chat.Server/Chat.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
@@ -9,7 +9,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.2" />
         <PackageReference Include="MagicOnion.Server" Version="7.0.3" />
         <PackageReference Include="MagicOnion.Server.Redis" Version="7.0.3" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.71.0" />
