fix(docker): update paths to reflect src/ folder structure
- Updated compose.yaml to reference src/Chat.Server/Dockerfile and src/Chat.Client/Dockerfile
- Updated Dockerfiles to use src/ prefix in COPY and WORKDIR paths
- Removed Docker files from .gitignore (Dockerfiles are source code)

--- a/compose.yaml
+++ b/compose.yaml
@@ -15,7 +15,7 @@ services:
     image: chat.server
     build:
       context: .
-      dockerfile: Chat.Server/Dockerfile
+      dockerfile: src/Chat.Server/Dockerfile
     ports:
       - "5000:8080"
     environment:
@@ -41,7 +41,7 @@ services:
     image: chat.server
     build:
       context: .
-      dockerfile: Chat.Server/Dockerfile
+      dockerfile: src/Chat.Server/Dockerfile
     ports:
       - "5001:8080"
     environment:
@@ -69,7 +69,7 @@ services:
     image: chat.client
     build:
       context: .
-      dockerfile: Chat.Client/Dockerfile
+      dockerfile: src/Chat.Client/Dockerfile
     stdin_open: true
     tty: true
     depends_on:
