refactor: migrate to MagicOnion built-in Redis groups
Replace custom Redis pub/sub implementation with MagicOnion.Server.Redis
built-in group support for distributed message broadcasting.

Breaking Changes:
- IChatHub: SendMessageAsync → SendMessage (void)
- IChatHub: LeaveAsync → Leave (void)
- IChatHub: Added ServerPing() method
- MessageData: Changed to record type with required properties
- MessageData: Added MessageId (Guid) for tracking

Architecture Changes:
- Removed custom IRedisMessageBus, RedisMessageBus, MessageBroadcaster
- ChatHub now uses MagicOnion groups directly via .UseRedisGroup()
- Simplified Program.cs service registration

Improvements:
- Central package management via Directory.Packages.props
- Extracted ChatReceiver to separate file
- Added Constants class for shared values
- Client handles Ctrl+C gracefully

Files Deleted:
- src/Chat.Server/Services/IRedisMessageBus.cs
- src/Chat.Server/Services/RedisMessageBus.cs
- src/Chat.Server/Services/MessageBroadcaster.cs

This refactoring reduces complexity while maintaining the same
functionality using framework-provided solutions.

--- a/src/Chat.Contracts/Chat.Contracts.csproj
+++ b/src/Chat.Contracts/Chat.Contracts.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
+  
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Chat.Contracts</RootNamespace>
   </PropertyGroup>
-
+  
   <ItemGroup>
-    <PackageReference Include="MagicOnion.Abstractions" Version="7.0.3" />
-    <PackageReference Include="MessagePack.Annotations" Version="3.1.1" />
+    <PackageReference Include="MagicOnion.Abstractions" />
+    <PackageReference Include="MessagePack.Annotations" />
   </ItemGroup>
 
 </Project>
