--- a/src/Chat.Server/Dockerfile
+++ b/src/Chat.Server/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /src
 # Copy project files
 COPY ["src/Chat.Server/Chat.Server.csproj", "src/Chat.Server/"]
 COPY ["src/Chat.Contracts/Chat.Contracts.csproj", "src/Chat.Contracts/"]
+COPY ["src/Directory.Build.props", "src/"]
+COPY ["src/Directory.Packages.props", "src/"]
 
 # Restore dependencies
 RUN dotnet restore "src/Chat.Server/Chat.Server.csproj"
